# optimization

./: CMakeLists.txt  README.md  osqp_eigen.cpp
